@@ -273,7 +273,7 @@ serious/official/meaningful work. Changes in this new version:
 <li> Added multithreaded processing on all platforms </li>
 <li> Added DFXML output mode </li>
 <li> Added support for common crypto functions on OS X </li>
-<li> Rewrote large portions of the code in C++< </li>
+<li> Rewrote large portions of the code in C++ </li>
 <li> Added regression testing </a>
 </ul>
 
